新增通用数据库接口

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,6 +146,7 @@ nav:
                         - 数据库迁移: 开发语言/Go语言开发/数据操作/Gorm/教程/数据库迁移.md
                         - 事务: 开发语言/Go语言开发/数据操作/Gorm/教程/事务.md
                         - 原生SQL和SQL生成器: 开发语言/Go语言开发/数据操作/Gorm/教程/原生SQL和SQL生成器.md
+                        - 通用数据库接口: 开发语言/Go语言开发/数据操作/Gorm/教程/通用数据库接口.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
