--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
                 - 为什么要有虚拟机内存: 计算机基础/操作系统/内存管理/为什么要有虚拟机内存.md
     - 开发语言:
         - Go语言开发:
-            Go语言基础:
+           - Go语言基础:
                 - 开发环境:
                     - Ubuntu开发环境搭建(带版本管理): 开发语言/Go语言开发/Go语言基础/开发环境/Go语言Ubuntu开发环境搭建.md
                     - Windows开发环境搭建(带版本管理): 开发语言/Go语言开发/Go语言基础/开发环境/Go语言Windows开发环境搭建.md
