修改目录结构

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,21 +33,21 @@ nav:
                         - Windows开发环境搭建(带版本管理): 开发语言/Go语言开发/Go语言基础/开发环境/Go语言Windows开发环境搭建.md
                         - 模块管理: 开发语言/Go语言开发/Go语言基础/开发环境/模块管理.md
                         - 可执行文件压缩: 开发语言/Go语言开发/Go语言基础/开发环境/可执行文件压缩.md
-                    - Go入门:
-                        - Go语言的主要特征: 开发语言/Go语言开发/Go语言基础/Go入门/Go语言的主要特征.md
-                        - Golang内置类型和函数: 开发语言/Go语言开发/Go语言基础/Go入门/Golang内置类型和函数.md
-                        - Init函数和main函数: 开发语言/Go语言开发/Go语言基础/Go入门/Init函数和main函数.md
-                        - 命令: 开发语言/Go语言开发/Go语言基础/Go入门/命令.md
-                        - 运算符: 开发语言/Go语言开发/Go语言基础/Go入门/运算符.md
-                        - 下划线: 开发语言/Go语言开发/Go语言基础/Go入门/下划线.md
-                        - 变量和常量: 开发语言/Go语言开发/Go语言基础/Go入门/变量和常量.md
-                        - 基本类型: 开发语言/Go语言开发/Go语言基础/Go入门/基本类型.md
-                        - 切片Slice: 开发语言/Go语言开发/Go语言基础/Go入门/切片Slice.md
-                        - Slice底层实现: 开发语言/Go语言开发/Go语言基础/Go入门/Slice底层实现.md
-                        - 指针: 开发语言/Go语言开发/Go语言基础/Go入门/指针.md
-                        - Map: 开发语言/Go语言开发/Go语言基础/Go入门/Map.md
-                        - Map实现原理: 开发语言/Go语言开发/Go语言基础/Go入门/Map实现原理.md
-                        - 结构体: 开发语言/Go语言开发/Go语言基础/Go入门/结构体.md
+                    - 入门:
+                        - Go语言的主要特征: 开发语言/Go语言开发/Go语言基础/入门/Go语言的主要特征.md
+                        - Golang内置类型和函数: 开发语言/Go语言开发/Go语言基础/入门/Golang内置类型和函数.md
+                        - Init函数和main函数: 开发语言/Go语言开发/Go语言基础/入门/Init函数和main函数.md
+                        - 命令: 开发语言/Go语言开发/Go语言基础/入门/命令.md
+                        - 运算符: 开发语言/Go语言开发/Go语言基础/入门/运算符.md
+                        - 下划线: 开发语言/Go语言开发/Go语言基础/入门/下划线.md
+                        - 变量和常量: 开发语言/Go语言开发/Go语言基础/入门/变量和常量.md
+                        - 基本类型: 开发语言/Go语言开发/Go语言基础/入门/基本类型.md
+                        - 切片Slice: 开发语言/Go语言开发/Go语言基础/入门/切片Slice.md
+                        - Slice底层实现: 开发语言/Go语言开发/Go语言基础/入门/Slice底层实现.md
+                        - 指针: 开发语言/Go语言开发/Go语言基础/入门/指针.md
+                        - Map: 开发语言/Go语言开发/Go语言基础/入门/Map.md
+                        - Map实现原理: 开发语言/Go语言开发/Go语言基础/入门/Map实现原理.md
+                        - 结构体: 开发语言/Go语言开发/Go语言基础/入门/结构体.md
                     - 流程控制:
                         - 条件语句if: 开发语言/Go语言开发/Go语言基础/流程控制/条件语句if.md
                         - 条件语句switch: 开发语言/Go语言开发/Go语言基础/流程控制/条件语句switch.md
