--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,6 +152,8 @@ nav:
                             - Gorm用法介绍: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/Gorm用法介绍.md
                 - 并发编程:
                     - Goroutine: 开发语言/Go语言开发/Go语言进阶/并发编程/Goroutine.md
+                    - runtime包: 开发语言/Go语言开发/Go语言进阶/并发编程/runtime包.md
+                    - Channel: 开发语言/Go语言开发/Go语言进阶/并发编程/Channel.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
