--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -154,6 +154,8 @@ nav:
                     - Goroutine: 开发语言/Go语言开发/Go语言进阶/并发编程/Goroutine.md
                     - runtime包: 开发语言/Go语言开发/Go语言进阶/并发编程/runtime包.md
                     - Channel: 开发语言/Go语言开发/Go语言进阶/并发编程/Channel.md
+                    - Goroutine池: 开发语言/Go语言开发/Go语言进阶/并发编程/Goroutine池.md
+                    - 定时器: 开发语言/Go语言开发/Go语言进阶/并发编程/定时器.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
