--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,7 +153,7 @@ nav:
                     - Goroutine: 开发语言/Go语言开发/Go语言进阶/并发编程/Goroutine.md
                     - runtime包: 开发语言/Go语言开发/Go语言进阶/并发编程/runtime包.md
                     - Channel: 开发语言/Go语言开发/Go语言进阶/并发编程/Channel.md
-                    - Goroutine池: 开发语言/Go语言开发/Go语言进阶/并发编程/Goroutine池.md
+                    - 线程池: 开发语言/Go语言开发/Go语言进阶/并发编程/线程池.md
                     - 定时器: 开发语言/Go语言开发/Go语言进阶/并发编程/定时器.md
                     - select: 开发语言/Go语言开发/Go语言进阶/并发编程/select.md
                     - 并发安全和锁: 开发语言/Go语言开发/Go语言进阶/并发编程/并发安全和锁.md
