--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -154,6 +154,18 @@ nav:
                         - benchmark基准测试: 开发语言/Go语言开发/Go语言高性能编程/性能分析/benchmark基准测试.md
                         - pprof性能分析: 开发语言/Go语言开发/Go语言高性能编程/性能分析/pprof性能分析.md
                         - pyroscope性能分析: 开发语言/Go语言开发/Go语言高性能编程/性能分析/pyroscope性能分析.md
+                    - 常用数据结构:
+                        - 字符串拼接性能及原理: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/字符串拼接性能及原理.md
+                        - 切片(slice)性能及陷阱: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/切片(slice)性能及陷阱.md
+                        - for和range的性能比较: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/for和range的性能比较.md
+                        - GoReflect提高反射性能: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/GoReflect提高反射性能.md
+                        - Go空结构体struct{}的使用: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/Go空结构体struct{}的使用.md
+                        - Gostruct内存对齐: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/Gostruct内存对齐.md
+                    - 并发编程:
+                        - 读写锁和互斥锁的性能比较: 开发语言/Go语言开发/Go语言高性能编程/并发编程/读写锁和互斥锁的性能比较.md
+                        - 如何退出协程goroutine(超时场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(超时场景).md
+                        - 如何退出协程goroutine(其他场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(其他场景).md
+                        - 控制协程(goroutine)的并发数量: 开发语言/Go语言开发/Go语言高性能编程/并发编程/控制协程(goroutine)的并发数量.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
@@ -161,6 +173,9 @@ nav:
                 - 使用IDEA配置Maven:  开发语言/Java语言开发/开发环境搭建/使用IDEA配置Maven.md
                 - SpringBoot第一个程序: 开发语言/Java语言开发/开发环境搭建/SpringBoot第一个程序.md
                 - Dockerfile部署SpringBoot项目: 开发语言/Java语言开发/开发环境搭建/IDEA连接远程服务器Docker部署SpringBoot项目.md
+                - Gosync.Pool: 开发语言/Go语言开发/Go语言高性能编程/并发编程/Gosync.Pool.md
+                - Gosync.Once: 开发语言/Go语言开发/Go语言高性能编程/并发编程/Gosync.Once.md
+                - Gosync.Cond: 开发语言/Go语言开发/Go语言高性能编程/并发编程/Gosync.Cond.md
     - 中间件:
         - Mysql:
             - 如何开启慢Sql日志: 中间件/Mysql/如何开启慢Sql日志.md
