--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,6 +166,11 @@ nav:
                         - 如何退出协程goroutine(超时场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(超时场景).md
                         - 如何退出协程goroutine(其他场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(其他场景).md
                         - 控制协程(goroutine)的并发数量: 开发语言/Go语言开发/Go语言高性能编程/并发编程/控制协程(goroutine)的并发数量.md
+                        - 内联函数和编译器对Go代码的优化: 开发语言/Go语言开发/Go语言高性能编程/编译优化/内联函数和编译器对Go代码的优化.md
+                    - 编译优化:
+                        - 减小Go代码编译后的二进制体积: 开发语言/Go语言开发/Go语言高性能编程/编译优化/减小Go代码编译后的二进制体积.md
+                        - 内联函数和编译器对Go代码的优化: 开发语言/Go语言开发/Go语言高性能编程/编译优化/内联函数和编译器对Go代码的优化.md
+                        - Go逃逸分析: 开发语言/Go语言开发/Go语言高性能编程/编译优化/Go逃逸分析.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
