--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,28 +149,31 @@ nav:
                             - 原生SQL和SQL生成器: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/原生SQL和SQL生成器.md
                             - 通用数据库接口: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/通用数据库接口.md
                             - Gorm用法介绍: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/Gorm用法介绍.md
-                - Go语言高性能编程:
-                    - 性能分析:
-                        - benchmark基准测试: 开发语言/Go语言开发/Go语言高性能编程/性能分析/benchmark基准测试.md
-                        - pprof性能分析: 开发语言/Go语言开发/Go语言高性能编程/性能分析/pprof性能分析.md
-                        - pyroscope性能分析: 开发语言/Go语言开发/Go语言高性能编程/性能分析/pyroscope性能分析.md
-                    - 常用数据结构:
-                        - 字符串拼接性能及原理: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/字符串拼接性能及原理.md
-                        - 切片(slice)性能及陷阱: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/切片(slice)性能及陷阱.md
-                        - for和range的性能比较: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/for和range的性能比较.md
-                        - GoReflect提高反射性能: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/GoReflect提高反射性能.md
-                        - Go空结构体struct{}的使用: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/Go空结构体struct{}的使用.md
-                        - Gostruct内存对齐: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/Gostruct内存对齐.md
-                    - 并发编程:
-                        - 读写锁和互斥锁的性能比较: 开发语言/Go语言开发/Go语言高性能编程/并发编程/读写锁和互斥锁的性能比较.md
-                        - 如何退出协程goroutine(超时场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(超时场景).md
-                        - 如何退出协程goroutine(其他场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(其他场景).md
-                        - 控制协程(goroutine)的并发数量: 开发语言/Go语言开发/Go语言高性能编程/并发编程/控制协程(goroutine)的并发数量.md
-                        - 内联函数和编译器对Go代码的优化: 开发语言/Go语言开发/Go语言高性能编程/编译优化/内联函数和编译器对Go代码的优化.md
-                    - 编译优化:
-                        - 减小Go代码编译后的二进制体积: 开发语言/Go语言开发/Go语言高性能编程/编译优化/减小Go代码编译后的二进制体积.md
-                        - 内联函数和编译器对Go代码的优化: 开发语言/Go语言开发/Go语言高性能编程/编译优化/内联函数和编译器对Go代码的优化.md
-                        - Go逃逸分析: 开发语言/Go语言开发/Go语言高性能编程/编译优化/Go逃逸分析.md
+            - Go语言高性能编程:
+                - 性能分析:
+                    - benchmark基准测试: 开发语言/Go语言开发/Go语言高性能编程/性能分析/benchmark基准测试.md
+                    - pprof性能分析: 开发语言/Go语言开发/Go语言高性能编程/性能分析/pprof性能分析.md
+                    - pyroscope性能分析: 开发语言/Go语言开发/Go语言高性能编程/性能分析/pyroscope性能分析.md
+                - 常用数据结构:
+                    - 字符串拼接性能及原理: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/字符串拼接性能及原理.md
+                    - 切片(slice)性能及陷阱: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/切片(slice)性能及陷阱.md
+                    - for和range的性能比较: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/for和range的性能比较.md
+                    - GoReflect提高反射性能: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/GoReflect提高反射性能.md
+                    - Go空结构体struct{}的使用: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/Go空结构体struct{}的使用.md
+                    - Gostruct内存对齐: 开发语言/Go语言开发/Go语言高性能编程/常用数据结构/Gostruct内存对齐.md
+                - 并发编程:
+                    - 读写锁和互斥锁的性能比较: 开发语言/Go语言开发/Go语言高性能编程/并发编程/读写锁和互斥锁的性能比较.md
+                    - 如何退出协程goroutine(超时场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(超时场景).md
+                    - 如何退出协程goroutine(其他场景): 开发语言/Go语言开发/Go语言高性能编程/并发编程/如何退出协程goroutine(其他场景).md
+                    - 控制协程(goroutine)的并发数量: 开发语言/Go语言开发/Go语言高性能编程/并发编程/控制协程(goroutine)的并发数量.md
+                    - 内联函数和编译器对Go代码的优化: 开发语言/Go语言开发/Go语言高性能编程/编译优化/内联函数和编译器对Go代码的优化.md
+                - 编译优化:
+                    - 减小Go代码编译后的二进制体积: 开发语言/Go语言开发/Go语言高性能编程/编译优化/减小Go代码编译后的二进制体积.md
+                    - 内联函数和编译器对Go代码的优化: 开发语言/Go语言开发/Go语言高性能编程/编译优化/内联函数和编译器对Go代码的优化.md
+                    - Go逃逸分析: 开发语言/Go语言开发/Go语言高性能编程/编译优化/Go逃逸分析.md
+                - 运行时相关知识普及:
+                    - GMP原理与调度: 开发语言/Go语言开发/Go语言高性能编程/运行时/GMP原理与调度.md
+                    - Golang三色标记+混合写屏障GC模式全分析: 开发语言/Go语言开发/Go语言高性能编程/运行时/Golang三色标记+混合写屏障GC模式全分析.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
