--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -173,7 +173,7 @@ nav:
                     - Go逃逸分析: 开发语言/Go语言开发/Go语言高性能编程/编译优化/Go逃逸分析.md
                 - 运行时相关知识普及:
                     - GMP原理与调度: 开发语言/Go语言开发/Go语言高性能编程/运行时/GMP原理与调度.md
-                    - Golang三色标记+混合写屏障GC模式全分析: 开发语言/Go语言开发/Go语言高性能编程/运行时/Golang三色标记+混合写屏障GC模式全分析.md
+                    - Golang内存回收模式全分析: 开发语言/Go语言开发/Go语言高性能编程/运行时/Golang内存回收模式全分析.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
