--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: 许鹏的学习文档
 nav:
     - 目录: index.md
     - 开发环境搭建:
-        - 操作系统:   
+        - 操作系统环境搭建:   
             - Ubuntu:
                 - Ubuntu修改DNS: 开发环境搭建/操作系统/Ubuntu/Ubuntu修改DNS.md  
                 - 定制ubuntu_iso镜像: 开发环境搭建/操作系统/Ubuntu/使用Cubic定制ubuntu_iso镜像.md  
@@ -30,7 +30,7 @@ nav:
                 - CPU是如何执行程序的: 计算机基础/计算机组成原理/计算机硬件结构/CPU是如何执行程序的.md
         - 计算机操作系统:
             - 内存管理:
-                - 为什么要有虚拟机内存: 计算机基础/操作系统/内存管理/为什么要有虚拟机内存.md
+                - 为什么要有虚拟机内存: 计算机基础/计算机操作系统/内存管理/为什么要有虚拟机内存.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
@@ -46,6 +46,7 @@ nav:
                         - 下划线: 开发语言/Go语言开发/Go语言基础/入门/下划线.md
                         - 变量和常量: 开发语言/Go语言开发/Go语言基础/入门/变量和常量.md
                         - 基本类型: 开发语言/Go语言开发/Go语言基础/入门/基本类型.md
+                        - 数组Array: 开发语言/Go语言开发/Go语言基础/入门/数组Array.md
                         - 切片Slice: 开发语言/Go语言开发/Go语言基础/入门/切片Slice.md
                         - Slice底层实现: 开发语言/Go语言开发/Go语言基础/入门/Slice底层实现.md
                         - 指针: 开发语言/Go语言开发/Go语言基础/入门/指针.md
