--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,8 @@ nav:
                 - Windows系统下载网站: 开发环境搭建/操作系统/Windows/Windows系统下载网站(推荐).md
             - 再生龙:
                 - 再生龙备份还原操作系统: 开发环境搭建/操作系统/再生龙/再生龙备份还原操作系统.md    
+        - 开发工具:
+            - VSCode安装教程（超详细）: 开发环境搭建/开发工具/VSCode安装教程（超详细）.md
         - Node.js开发环境搭建: 开发环境搭建/Node.js开发环境搭建.md
         - Nginx环境搭建: 开发环境搭建/Nginx环境搭建.md
     - 计算机基础:
