--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,22 +38,22 @@ nav:
                     - 开发环境:
                         - Ubuntu开发环境搭建(带版本管理): 开发语言/Go语言开发/Go语言基础/开发环境/Go语言Ubuntu开发环境搭建.md
                         - Windows开发环境搭建(带版本管理): 开发语言/Go语言开发/Go语言基础/开发环境/Go语言Windows开发环境搭建.md
-                    - 入门:
-                        - Go语言的主要特征: 开发语言/Go语言开发/Go语言基础/入门/Go语言的主要特征.md
-                        - Golang内置类型和函数: 开发语言/Go语言开发/Go语言基础/入门/Golang内置类型和函数.md
-                        - Init函数和main函数: 开发语言/Go语言开发/Go语言基础/入门/Init函数和main函数.md
-                        - 命令: 开发语言/Go语言开发/Go语言基础/入门/命令.md
-                        - 运算符: 开发语言/Go语言开发/Go语言基础/入门/运算符.md
-                        - 下划线: 开发语言/Go语言开发/Go语言基础/入门/下划线.md
-                        - 变量和常量: 开发语言/Go语言开发/Go语言基础/入门/变量和常量.md
-                        - 基本类型: 开发语言/Go语言开发/Go语言基础/入门/基本类型.md
-                        - 数组Array: 开发语言/Go语言开发/Go语言基础/入门/数组Array.md
-                        - 切片Slice: 开发语言/Go语言开发/Go语言基础/入门/切片Slice.md
-                        - Slice底层实现: 开发语言/Go语言开发/Go语言基础/入门/Slice底层实现.md
-                        - 指针: 开发语言/Go语言开发/Go语言基础/入门/指针.md
-                        - Map: 开发语言/Go语言开发/Go语言基础/入门/Map.md
-                        - Map实现原理: 开发语言/Go语言开发/Go语言基础/入门/Map实现原理.md
-                        - 结构体: 开发语言/Go语言开发/Go语言基础/入门/结构体.md
+                    - 语言基础:
+                        - Go语言的主要特征: 开发语言/Go语言开发/Go语言基础/语言基础/Go语言的主要特征.md
+                        - Golang内置类型和函数: 开发语言/Go语言开发/Go语言基础/语言基础/Golang内置类型和函数.md
+                        - Init函数和main函数: 开发语言/Go语言开发/Go语言基础/语言基础/Init函数和main函数.md
+                        - 命令: 开发语言/Go语言开发/Go语言基础/语言基础/命令.md
+                        - 运算符: 开发语言/Go语言开发/Go语言基础/语言基础/运算符.md
+                        - 下划线: 开发语言/Go语言开发/Go语言基础/语言基础/下划线.md
+                        - 变量和常量: 开发语言/Go语言开发/Go语言基础/语言基础/变量和常量.md
+                        - 基本类型: 开发语言/Go语言开发/Go语言基础/语言基础/基本类型.md
+                        - 数组Array: 开发语言/Go语言开发/Go语言基础/语言基础/数组Array.md
+                        - 切片Slice: 开发语言/Go语言开发/Go语言基础/语言基础/切片Slice.md
+                        - Slice底层实现: 开发语言/Go语言开发/Go语言基础/语言基础/Slice底层实现.md
+                        - 指针: 开发语言/Go语言开发/Go语言基础/语言基础/指针.md
+                        - Map: 开发语言/Go语言开发/Go语言基础/语言基础/Map.md
+                        - Map实现原理: 开发语言/Go语言开发/Go语言基础/语言基础/Map实现原理.md
+                        - 结构体: 开发语言/Go语言开发/Go语言基础/语言基础/结构体.md
                     - 流程控制:
                         - 条件语句if: 开发语言/Go语言开发/Go语言基础/流程控制/条件语句if.md
                         - 条件语句switch: 开发语言/Go语言开发/Go语言基础/流程控制/条件语句switch.md
