--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
                         - 下划线: 开发语言/Go语言开发/Go语言基础/语言基础/下划线.md
                         - 变量和常量: 开发语言/Go语言开发/Go语言基础/语言基础/变量和常量.md
                         - 基本类型: 开发语言/Go语言开发/Go语言基础/语言基础/基本类型.md
+                    - 数据类型:
                         - 数组Array: 开发语言/Go语言开发/Go语言基础/语言基础/数组Array.md
                         - 切片Slice: 开发语言/Go语言开发/Go语言基础/语言基础/切片Slice.md
                         - Slice底层实现: 开发语言/Go语言开发/Go语言基础/语言基础/Slice底层实现.md
