--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,13 +48,13 @@ nav:
                         - 变量和常量: 开发语言/Go语言开发/Go语言基础/语言基础/变量和常量.md
                         - 基本类型: 开发语言/Go语言开发/Go语言基础/语言基础/基本类型.md
                     - 数据类型:
-                        - 数组Array: 开发语言/Go语言开发/Go语言基础/语言基础/数组Array.md
-                        - 切片Slice: 开发语言/Go语言开发/Go语言基础/语言基础/切片Slice.md
-                        - Slice底层实现: 开发语言/Go语言开发/Go语言基础/语言基础/Slice底层实现.md
-                        - 指针: 开发语言/Go语言开发/Go语言基础/语言基础/指针.md
-                        - Map: 开发语言/Go语言开发/Go语言基础/语言基础/Map.md
-                        - Map实现原理: 开发语言/Go语言开发/Go语言基础/语言基础/Map实现原理.md
-                        - 结构体: 开发语言/Go语言开发/Go语言基础/语言基础/结构体.md
+                        - 数组Array: 开发语言/Go语言开发/Go语言基础/数据类型/数组Array.md
+                        - 切片Slice: 开发语言/Go语言开发/Go语言基础/数据类型/切片Slice.md
+                        - Slice底层实现: 开发语言/Go语言开发/Go语言基础/数据类型/Slice底层实现.md
+                        - 指针: 开发语言/Go语言开发/Go语言基础/数据类型/指针.md
+                        - Map: 开发语言/Go语言开发/Go语言基础/数据类型/Map.md
+                        - Map实现原理: 开发语言/Go语言开发/Go语言基础/数据类型/Map实现原理.md
+                        - 结构体: 开发语言/Go语言开发/Go语言基础/数据类型/结构体.md
                     - 流程控制:
                         - 条件语句if: 开发语言/Go语言开发/Go语言基础/流程控制/条件语句if.md
                         - 条件语句switch: 开发语言/Go语言开发/Go语言基础/流程控制/条件语句switch.md
