--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,8 @@ nav:
                 - 再生龙备份还原操作系统: 开发环境搭建/操作系统/再生龙/再生龙备份还原操作系统.md    
         - 开发工具:
             - VSCode:
-                - VSCode_Windows安装教程: 开发环境搭建/开发工具/VSCode_Windows安装教程.md
+                - VSCode_Windows安装教程: 开发环境搭建/开发工具/VSCode/VSCode_Windows安装教程.md
+                - VSCode_Ubuntu安装教程: 开发环境搭建/开发工具/VSCode/VSCode_Ubuntu安装教程.md
         - Node.js开发环境搭建: 开发环境搭建/Node.js开发环境搭建.md
         - Nginx环境搭建: 开发环境搭建/Nginx环境搭建.md
     - 计算机基础:
