--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,12 @@ nav:
             - VSCode:
                 - VSCode_Windows安装教程: 开发环境搭建/开发工具/VSCode/VSCode_Windows安装教程.md
                 - VSCode_Ubuntu安装教程: 开发环境搭建/开发工具/VSCode/VSCode_Ubuntu安装教程.md
+            - Git:
+                - Git_Windows安装: 开发环境搭建/开发工具/Git/Git_Windows安装.md
+                - Git_Ubuntu安装: 开发环境搭建/开发工具/Git/Git_Ubuntu安装.md
+        - 虚拟机:
+            - VMware16安装Win11: 开发环境搭建/虚拟机/VMware16安装Win11.md
+            - VMware16安装Ubuntu20: 开发环境搭建/虚拟机/VMware16安装Ubuntu20.04.md
         - Node.js开发环境搭建: 开发环境搭建/Node.js开发环境搭建.md
         - Nginx环境搭建: 开发环境搭建/Nginx环境搭建.md
     - 计算机基础:
