--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,8 +23,6 @@ nav:
             - Git:
                 - Git_Windows安装: 开发环境搭建/开发工具/Git/Git_Windows安装.md
                 - Git_Ubuntu安装: 开发环境搭建/开发工具/Git/Git_Ubuntu安装.md
-        - Node.js开发环境搭建: 开发环境搭建/Node.js开发环境搭建.md
-        - Nginx环境搭建: 开发环境搭建/Nginx环境搭建.md
     - 计算机基础:
         - 计算机网络:
             - HTTP/HTTPS:
@@ -166,6 +164,12 @@ nav:
                             - 原生SQL和SQL生成器: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/原生SQL和SQL生成器.md
                             - 通用数据库接口: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/通用数据库接口.md
                             - Gorm用法介绍: 开发语言/Go语言开发/Go语言进阶/数据操作/Gorm/教程/Gorm用法介绍.md
+                - 常用框架:
+                    - Gin框架:
+                        - 简介:
+                            - 简介: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/简介/简介.md
+                        - Gin路由:
+                            - 基本路由: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin路由/基本路由.md
             - Go语言高性能编程:
                 - 性能分析:
                     - benchmark基准测试: 开发语言/Go语言开发/Go语言高性能编程/性能分析/benchmark基准测试.md
@@ -201,6 +205,8 @@ nav:
                 - Gosync.Pool: 开发语言/Go语言开发/Go语言高性能编程/并发编程/Gosync.Pool.md
                 - Gosync.Once: 开发语言/Go语言开发/Go语言高性能编程/并发编程/Gosync.Once.md
                 - Gosync.Cond: 开发语言/Go语言开发/Go语言高性能编程/并发编程/Gosync.Cond.md
+        - Nodejs开发:
+            - Node.js开发环境搭建: 开发语言/Nodejs/Node.js开发环境搭建.md
     - 中间件:
         - Mysql:
             - 如何开启慢Sql日志: 中间件/Mysql/如何开启慢Sql日志.md
@@ -252,6 +258,8 @@ nav:
             - 4.领域服务: 领域驱动设计/内部博客系列/4.领域服务.md
             - 5.应用服务: 领域驱动设计/内部博客系列/5.应用服务.md
             - 6.六边形架构: 领域驱动设计/内部博客系列/6.六边形架构.md
+    - Nginx:
+        - Nginx环境搭建: Nginx/Nginx环境搭建.md
     - Docker开发技术:
         - 环境搭建: Docker开发技术/Ubuntu20.04上安装和使用Docker.md
     - Kubernetes开发技术:
