--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,6 +178,24 @@ nav:
                             - 上传多个文件: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin路由/上传多个文件.md
                             - routesgroup: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin路由/routesgroup.md
                             - 路由拆分与注册: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin路由/路由拆分与注册.md
+                        - Gin数据解析与绑定:
+                            - Json数据解析和绑定: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin数据解析与绑定/Json数据解析和绑定.md
+                            - 表单数据解析和绑定: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin数据解析与绑定/表单数据解析和绑定.md
+                            - URI数据解析和绑定: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin数据解析与绑定/URI数据解析和绑定.md
+                        - Gin渲染:
+                            - 各种数据格式的响应: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin渲染/各种数据格式的响应.md
+                            - HTML模板渲染: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin渲染/HTML模板渲染.md
+                            - 重定向: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin渲染/重定向.md
+                            - 同步异步: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin渲染/同步异步.md
+                        - Gin中间件:
+                            - 局部中间件: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin中间件/局部中间件.md
+                            - 全局中间件: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin中间件/全局中间件.md
+                            - Next()方法: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/Gin中间件/Next()方法.md
+                        - 会话控制:
+                            - Cookie介绍: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/会话控制/Cookie介绍.md
+                            - Cookie的使用: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/会话控制/Cookie的使用.md
+                            - Cookie的缺点: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/会话控制/Cookie的缺点.md
+                            - Sessions: 开发语言/Go语言开发/Go语言进阶/常用框架/Gin框架/会话控制/Sessions.md
             - Go语言高性能编程:
                 - 性能分析:
                     - benchmark基准测试: 开发语言/Go语言开发/Go语言高性能编程/性能分析/benchmark基准测试.md
