--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -194,6 +194,11 @@ nav:
                     - 快速入门:
                         - Beego快速入门教程: 开发语言/Go语言开发/Go语言Web开发/Beego框架/Beego快速入门教程.md
                         - Beego参数配置: 开发语言/Go语言开发/Go语言Web开发/Beego框架/快速入门/Beego参数配置.md
+                    - 控制器:
+                        - Beego路由设置: 开发语言/Go语言开发/Go语言Web开发/Beego框架/控制器/Beego路由设置.md
+                        - Beego控制器函数: 开发语言/Go语言开发/Go语言Web开发/Beego框架/控制器/Beego控制器函数.md
+                        - Beego处理请求参数: 开发语言/Go语言开发/Go语言Web开发/Beego框架/控制器/Beego处理请求参数.md
+                        - Beego处理响应数据: 开发语言/Go语言开发/Go语言Web开发/Beego框架/控制器/Beego处理响应数据.md
                 - Gin框架:
                     - 快速入门: 开发语言/Go语言开发/Go语言Web开发/Gin框架/GoGin框架入门教程.md
                     - Gin路由:
