--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -205,6 +205,10 @@ nav:
                         - beegoOrm高级查询: 开发语言/Go语言开发/Go语言Web开发/Beego框架/模型/BeegoOrm高级查询.md
                         - beegoOrm如何执行SQL查询: 开发语言/Go语言开发/Go语言Web开发/Beego框架/模型/BeegoOrm如何执行SQL查询.md
                         - BeegoOrm数据库事务处理: 开发语言/Go语言开发/Go语言Web开发/Beego框架/模型/BeegoOrm数据库事务处理.md
+                    - 视图:
+                        - Beego模板入门教程: 开发语言/Go语言开发/Go语言Web开发/Beego框架/视图/Beego模板入门教程.md
+                        - Beego模板函数: 开发语言/Go语言开发/Go语言Web开发/Beego框架/视图/Beego模板函数.md
+                        - Beego静态资源路径设置: 开发语言/Go语言开发/Go语言Web开发/Beego框架/视图/Beego静态资源路径设置.md
                 - Gin框架:
                     - 快速入门: 开发语言/Go语言开发/Go语言Web开发/Gin框架/GoGin框架入门教程.md
                     - Gin路由:
