--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,37 +91,37 @@ nav:
                 - 依赖管理:
                     - Golang依赖管理: 开发语言/Go语言开发/Go语言进阶/依赖管理/Golang项目依赖Gomodules.md
                 - 常用标准库:
-                    - strings包使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/strings包使用.md
-                    - strconv(字符串转换)包使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/strconv(字符串转换)包使用.md
-                    - Time(时间)包使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/Time(时间)包使用.md
-                    - fmt包使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/fmt包使用.md
-                    - ioutil包使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/ioutil包使用.md
-                    - bufio包使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/bufio包使用.md
-                    - context上下文: 开发语言/Go语言开发/Go语言进阶/常用标准库/context上下文.md
-                    - sync辅助并发: 开发语言/Go语言开发/Go语言进阶/常用标准库/sync辅助并发.md
-                    - flag命令行参数解析: 开发语言/Go语言开发/Go语言进阶/常用标准库/flag命令行参数解析.md
-                    - viper配置文件解析包: 开发语言/Go语言开发/Go语言进阶/常用标准库/viper配置文件解析包.md
-                    - sort排序和查询: 开发语言/Go语言开发/Go语言进阶/常用标准库/sort排序和查询.md
-                    - rune字符操作包(unicode): 开发语言/Go语言开发/Go语言进阶/常用标准库/rune字符操作包(unicode).md
-                    - Uber开源-高性能日志库Zap: 开发语言/Go语言开发/Go语言进阶/常用标准库/Uber开源-高性能日志库Zap.md
-                    - 高性能缓存库BigCache: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能缓存库BigCache.md
-                    - 系统基本操作包-OS: 开发语言/Go语言开发/Go语言进阶/常用标准库/系统基本操作包-OS.md
-                    - crypto之AES加解密实现: 开发语言/Go语言开发/Go语言进阶/常用标准库/crypto之AES加解密实现.md
-                    - crypto之RSA非对称加解密: 开发语言/Go语言开发/Go语言进阶/常用标准库/crypto之RSA非对称加解密.md
-                    - 结构体匿名字段的Json序列化、反序列化: 开发语言/Go语言开发/Go语言进阶/常用标准库/结构体匿名字段的Json序列化、反序列化.md
-                    - 全功能ORM框架(gorm)使用: 开发语言/Go语言开发/Go语言进阶/常用标准库/全功能ORM框架(gorm)使用.md
-                    - 数学函数和常量(math): 开发语言/Go语言开发/Go语言进阶/常用标准库/数学函数和常量(math).md
-                    - 360开源高性能excel库(Excelize): 开发语言/Go语言开发/Go语言进阶/常用标准库/360开源高性能excel库(Excelize).md
-                    - JWT在Golang中的实现: 开发语言/Go语言开发/Go语言进阶/常用标准库/JWT在Golang中的实现.md
-                    - 操作redis开源库(go-redis): 开发语言/Go语言开发/Go语言进阶/常用标准库/操作redis开源库(go-redis).md
-                    - 单元测试(testing): 开发语言/Go语言开发/Go语言进阶/常用标准库/单元测试(testing).md
-                    - ElasticSearch客户端的实现: 开发语言/Go语言开发/Go语言进阶/常用标准库/ElasticSearch客户端的实现.md
-                    - 知名爬虫框架Colly: 开发语言/Go语言开发/Go语言进阶/常用标准库/知名爬虫框架Colly.md
-                    - 定时任务管理Cron: 开发语言/Go语言开发/Go语言进阶/常用标准库/定时任务管理Cron.md
-                    - 现代的Go工具库go-funk: 开发语言/Go语言开发/Go语言进阶/常用标准库/现代的Go工具库go-funk.md
-                    - 高性能json解析器json-iterator: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能json解析器json-iterator.md
-                    - 高性能http客户端fasthttp: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能http客户端fasthttp.md
-                    - 高性能goroutine池ants: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能goroutine池ants.md
+                    - strings: 开发语言/Go语言开发/Go语言进阶/常用标准库/strings包使用.md
+                    - strconv: 开发语言/Go语言开发/Go语言进阶/常用标准库/strconv(字符串转换)包使用.md
+                    - time: 开发语言/Go语言开发/Go语言进阶/常用标准库/Time(时间)包使用.md
+                    - fmt: 开发语言/Go语言开发/Go语言进阶/常用标准库/fmt包使用.md
+                    - ioutil: 开发语言/Go语言开发/Go语言进阶/常用标准库/ioutil包使用.md
+                    - bufio: 开发语言/Go语言开发/Go语言进阶/常用标准库/bufio包使用.md
+                    - context: 开发语言/Go语言开发/Go语言进阶/常用标准库/context上下文.md
+                    - sync: 开发语言/Go语言开发/Go语言进阶/常用标准库/sync辅助并发.md
+                    - flag: 开发语言/Go语言开发/Go语言进阶/常用标准库/flag命令行参数解析.md
+                    - viper: 开发语言/Go语言开发/Go语言进阶/常用标准库/viper配置文件解析包.md
+                    - sort: 开发语言/Go语言开发/Go语言进阶/常用标准库/sort排序和查询.md
+                    - rune: 开发语言/Go语言开发/Go语言进阶/常用标准库/rune字符操作包(unicode).md
+                    - Zap: 开发语言/Go语言开发/Go语言进阶/常用标准库/Uber开源-高性能日志库Zap.md
+                    - BigCache: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能缓存库BigCache.md
+                    - os: 开发语言/Go语言开发/Go语言进阶/常用标准库/系统基本操作包-OS.md
+                    - crypto-aes: 开发语言/Go语言开发/Go语言进阶/常用标准库/crypto之AES加解密实现.md
+                    - crypto-rsa: 开发语言/Go语言开发/Go语言进阶/常用标准库/crypto之RSA非对称加解密.md
+                    - encoding/json: 开发语言/Go语言开发/Go语言进阶/常用标准库/结构体匿名字段的Json序列化、反序列化.md
+                    - gorm: 开发语言/Go语言开发/Go语言进阶/常用标准库/全功能ORM框架(gorm)使用.md
+                    - math: 开发语言/Go语言开发/Go语言进阶/常用标准库/数学函数和常量(math).md
+                    - Excelize: 开发语言/Go语言开发/Go语言进阶/常用标准库/360开源高性能excel库(Excelize).md
+                    - jwt: 开发语言/Go语言开发/Go语言进阶/常用标准库/JWT在Golang中的实现.md
+                    - go-redis: 开发语言/Go语言开发/Go语言进阶/常用标准库/操作redis开源库(go-redis).md
+                    - testing: 开发语言/Go语言开发/Go语言进阶/常用标准库/单元测试(testing).md
+                    - elastic: 开发语言/Go语言开发/Go语言进阶/常用标准库/ElasticSearch客户端的实现.md
+                    - Colly: 开发语言/Go语言开发/Go语言进阶/常用标准库/知名爬虫框架Colly.md
+                    - Cron: 开发语言/Go语言开发/Go语言进阶/常用标准库/定时任务管理Cron.md
+                    - go-funk: 开发语言/Go语言开发/Go语言进阶/常用标准库/现代的Go工具库go-funk.md
+                    - json-iterator: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能json解析器json-iterator.md
+                    - fasthttp: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能http客户端fasthttp.md
+                    - ants: 开发语言/Go语言开发/Go语言进阶/常用标准库/高性能goroutine池ants.md
                 - 网络编程:
                     - Socket编程: 
                         - TCP编程: 开发语言/Go语言开发/Go语言进阶/网络编程/Socket编程/TCP编程.md
