--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ nav:
             - 计算机硬件结构: 
                 - CPU是如何执行程序的: 计算机基础/计算机组成原理/计算机硬件结构/CPU是如何执行程序的.md
                 - 存储器之间的比较: 计算机基础/计算机组成原理/计算机硬件结构/存储器之间的比较.md
+                - 如何写出让CPU跑得更快的代码: 计算机基础/计算机组成原理/计算机硬件结构/如何写出让CPU跑得更快的代码.md
         - 计算机操作系统:
             - 内存管理:
                 - 为什么要有虚拟机内存: 计算机基础/计算机操作系统/内存管理/为什么要有虚拟机内存.md
