新增CPU缓存一致性

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,10 +33,11 @@ nav:
         - 计算机组成原理: 
             - 数据的表示与存储:
                 - 浮点类型在内存中如何存储: 计算机基础/计算机组成原理/数据的表示与存储/浮点类型在内存中如何存储.md
-            - 计算机硬件结构: 
+            - 计算机硬件: 
                 - CPU是如何执行程序的: 计算机基础/计算机组成原理/计算机硬件结构/CPU是如何执行程序的.md
                 - 存储器之间的比较: 计算机基础/计算机组成原理/计算机硬件结构/存储器之间的比较.md
                 - 如何写出让CPU跑得更快的代码: 计算机基础/计算机组成原理/计算机硬件结构/如何写出让CPU跑得更快的代码.md
+                - CPU缓存一致性: 计算机基础/计算机组成原理/计算机硬件结构/CPU缓存一致性.md
         - 计算机操作系统:
             - 内存管理:
                 - 为什么要有虚拟机内存: 计算机基础/计算机操作系统/内存管理/为什么要有虚拟机内存.md
