--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,8 @@ nav:
                 - 存储器之间的比较: 计算机基础/计算机组成原理/计算机硬件结构/存储器之间的比较.md
                 - 如何写出让CPU跑得更快的代码: 计算机基础/计算机组成原理/计算机硬件结构/如何写出让CPU跑得更快的代码.md
                 - CPU缓存一致性: 计算机基础/计算机组成原理/计算机硬件结构/CPU缓存一致性.md
+                - CPU是如何执行任务的: 计算机基础/计算机组成原理/计算机硬件结构/CPU是如何执行任务的.md
+                - 什么是软中断: 计算机基础/计算机组成原理/计算机硬件结构/什么是软中断.md
         - 计算机操作系统:
             - 内存管理:
                 - 为什么要有虚拟机内存: 计算机基础/计算机操作系统/内存管理/为什么要有虚拟机内存.md
