--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
                 - HTTP的Keep-Alive与TCP的Keep-Alive的区别: 计算机基础/计算机网络/HTTP与HTTPS/HTTP的Keep-Alive与TCP的Keep-Alive的区别.md
         - 计算机操作系统:
             - 硬件结构:
-                - CPU是如何执行程序的: 计算机基础/计算机操作系统/硬件结构/CPU是如何执行程序的.md
+                - 冯诺依曼模型: 计算机基础/计算机操作系统/硬件结构/CPU是如何执行程序的.md
                 - 存储器之间的比较: 计算机基础/计算机操作系统/硬件结构/存储器之间的比较.md
                 - 如何写出让CPU跑得更快的代码: 计算机基础/计算机操作系统/硬件结构/如何写出让CPU跑得更快的代码.md
                 - CPU缓存一致性: 计算机基础/计算机操作系统/硬件结构/CPU缓存一致性.md
