新增Go语言面试每日一题

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -255,6 +255,23 @@ nav:
                         - gin的路由算法: 开发语言/Go语言开发/Go语言Web开发/Gin框架/Gin源码阅读/gin的路由算法.md
                 - Fx框架:
                     - Fx理论篇: 开发语言/Go语言开发/Go语言Web开发/Fx框架/Fx理论篇.md
+            - Go语言面试:
+                - Go语言面试每日一题:
+                    - 第1天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第1天.md
+                    - 第2天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第2天.md
+                    - 第3天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第3天.md
+                    - 第4天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第4天.md
+                    - 第5天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第5天.md
+                    - 第6天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第6天.md
+                    - 第7天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第7天.md
+                    - 第8天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第8天.md
+                    - 第9天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第9天.md
+                    - 第10天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第10天.md
+                    - 第11天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第11天.md
+                    - 第12天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第12天.md
+                    - 第13天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第13天.md
+                    - 第14天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第14天.md
+                    - 第15天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第15天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
