新增内存满了会发生什么

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,8 @@ nav:
                 - 为什么0.1+0.2不等于0.3: 计算机基础/计算机操作系统/硬件结构/为什么0.1+0.2不等于0.3.md
             - 内存管理:
                 - 为什么要有虚拟内存: 计算机基础/计算机操作系统/内存管理/为什么要有虚拟内存.md
+                - malloc是如何分配内存的: 计算机基础/计算机操作系统/内存管理/malloc是如何分配内存的.md
+                - 内存满了会发生什么: 计算机基础/计算机操作系统/内存管理/内存满了会发生什么.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
