--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
                 - malloc是如何分配内存的: 计算机基础/计算机操作系统/内存管理/malloc是如何分配内存的.md
                 - 内存满了会发生什么: 计算机基础/计算机操作系统/内存管理/内存满了会发生什么.md
                 - 在4GB物理内存的机器上申请8G内存会怎么样: 计算机基础/计算机操作系统/内存管理/在4GB物理内存的机器上申请8G内存会怎么样.md
+                - 如何避免预读失效和缓存污染的问题: 计算机基础/计算机操作系统/内存管理/如何避免预读失效和缓存污染的问题.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
