--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
                 - 在4GB物理内存的机器上申请8G内存会怎么样: 计算机基础/计算机操作系统/内存管理/在4GB物理内存的机器上申请8G内存会怎么样.md
                 - 如何避免预读失效和缓存污染的问题: 计算机基础/计算机操作系统/内存管理/如何避免预读失效和缓存污染的问题.md
                 - 深入理解Linux虚拟内存管理: 计算机基础/计算机操作系统/内存管理/深入理解Linux虚拟内存管理.md
+                - 深入理解Linux物理内存管理: 计算机基础/计算机操作系统/内存管理/深入理解Linux物理内存管理.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
