新增多线程冲突了怎么办

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,10 @@ nav:
                 - 如何避免预读失效和缓存污染的问题: 计算机基础/计算机操作系统/内存管理/如何避免预读失效和缓存污染的问题.md
                 - 深入理解Linux虚拟内存管理: 计算机基础/计算机操作系统/内存管理/深入理解Linux虚拟内存管理.md
                 - 深入理解Linux物理内存管理: 计算机基础/计算机操作系统/内存管理/深入理解Linux物理内存管理.md
+            - 进程管理:
+                - 进程线程基础知识: 计算机基础/计算机操作系统/进程管理/进程线程基础知识.md
+                - 进程间有哪些通信方式: 计算机基础/计算机操作系统/进程管理/进程间有哪些通信方式.md
+                - 多线程冲突了怎么办: 计算机基础/计算机操作系统/进程管理/多线程冲突了怎么办.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
