新增什么是悲观锁乐观锁

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,8 @@ nav:
                 - 进程线程基础知识: 计算机基础/计算机操作系统/进程管理/进程线程基础知识.md
                 - 进程间有哪些通信方式: 计算机基础/计算机操作系统/进程管理/进程间有哪些通信方式.md
                 - 多线程冲突了怎么办: 计算机基础/计算机操作系统/进程管理/多线程冲突了怎么办.md
+                - 怎么避免死锁: 计算机基础/计算机操作系统/进程管理/怎么避免死锁.md
+                - 什么是悲观锁乐观锁: 计算机基础/计算机操作系统/进程管理/什么是悲观锁乐观锁.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
