新增线程崩溃了进程也会崩溃吗

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,8 @@ nav:
                 - 多线程冲突了怎么办: 计算机基础/计算机操作系统/进程管理/多线程冲突了怎么办.md
                 - 怎么避免死锁: 计算机基础/计算机操作系统/进程管理/怎么避免死锁.md
                 - 什么是悲观锁乐观锁: 计算机基础/计算机操作系统/进程管理/什么是悲观锁乐观锁.md
+                - 一个进程最多可以创建多少个线程: 计算机基础/计算机操作系统/进程管理/一个进程最多可以创建多少个线程.md
+                - 线程崩溃了进程也会崩溃吗: 计算机基础/计算机操作系统/进程管理/线程崩溃了进程也会崩溃吗.md
     - 开发语言:
         - Go语言开发:
             - Go语言基础:
