--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,6 +156,7 @@ nav:
                 - RPC编程:
                     - 初步了解RPC: 开发语言/Go语言开发/Go语言进阶/RPC编程/初步了解RPC.md
                     - 快速入门使用: 开发语言/Go语言开发/Go语言进阶/RPC编程/快速入门使用.md
+                    - gRPC快速入门: 开发语言/Go语言开发/Go语言进阶/RPC编程/gRPC快速入门.md
                 - 数据操作:
                     - Go操作Mysql:
                         - 链接Mysql: 开发语言/Go语言开发/Go语言进阶/数据操作/Go操作Mysql/链接Mysql.md
