--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -157,6 +157,8 @@ nav:
                     - 初步了解RPC: 开发语言/Go语言开发/Go语言进阶/RPC编程/初步了解RPC.md
                     - 快速入门使用: 开发语言/Go语言开发/Go语言进阶/RPC编程/快速入门使用.md
                     - gRPC快速入门: 开发语言/Go语言开发/Go语言进阶/RPC编程/gRPC快速入门.md
+                    - protobuf语法学习: 开发语言/Go语言开发/Go语言进阶/RPC编程/protobuf语法学习.md
+                    - gRPC中的Token认证: 开发语言/Go语言开发/Go语言进阶/RPC编程/gRPC中的Token认证.md
                 - 数据操作:
                     - Go操作Mysql:
                         - 链接Mysql: 开发语言/Go语言开发/Go语言进阶/数据操作/Go操作Mysql/链接Mysql.md
