--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -160,6 +160,7 @@ nav:
                     - protobuf语法学习: 开发语言/Go语言开发/Go语言进阶/RPC编程/protobuf语法学习.md
                     - gRPC中的Token认证: 开发语言/Go语言开发/Go语言进阶/RPC编程/gRPC中的Token认证.md
                     - gRPC中的证书认证: 开发语言/Go语言开发/Go语言进阶/RPC编程/gRPC中的证书认证.md
+                    - gRPC中的截取器: 开发语言/Go语言开发/Go语言进阶/RPC编程/gRPC中的截取器.md
                 - 数据操作:
                     - Go操作Mysql:
                         - 链接Mysql: 开发语言/Go语言开发/Go语言进阶/数据操作/Go操作Mysql/链接Mysql.md
