--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,8 @@ nav:
                 - Git_Ubuntu安装: 开发环境搭建/开发工具/Git/Git_Ubuntu安装.md
     - 计算机基础:
         - 计算机网络:
+            - TCP:
+                - TCP三次握手与四次挥手面试题: 计算机基础/计算机网络/TCP/TCP三次握手与四次挥手面试题.md
             - HTTP:
                 - URI和URL区别和关联: 计算机基础/计算机网络/HTTP/URI和URL区别和关联.md
                 - HTTP常见面试题: 计算机基础/计算机网络/HTTP/HTTP常见面试题.md
