--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,15 @@ nav:
                 - 为什么TCP每次建立连接时初始化序列号都要不一样呢: 计算机基础/计算机网络/TCP/为什么TCP每次建立连接时初始化序列号都要不一样呢.md
                 - SYN报文什么时候情况下会被丢弃: 计算机基础/计算机网络/TCP/SYN报文什么时候情况下会被丢弃.md
                 - 已建立连接的TCP收到SYN会发生什么: 计算机基础/计算机网络/TCP/已建立连接的TCP收到SYN会发生什么.md
+                - 四次挥手中收到乱序的FIN包会如何处理: 计算机基础/计算机网络/TCP/四次挥手中收到乱序的FIN包会如何处理.md
+                - 在TIME_WAIT状态的TCP连接收到SYN后会发生什么: 计算机基础/计算机网络/TCP/在TIME_WAIT状态的TCP连接收到SYN后会发生什么.md
+                - TCP连接一端断电和进程崩溃有什么区别: 计算机基础/计算机网络/TCP/TCP连接一端断电和进程崩溃有什么区别.md
+                - 拔掉网线后原本的TCP连接还存在吗: 计算机基础/计算机网络/TCP/拔掉网线后原本的TCP连接还存在吗.md
+                - tcp_tw_reuse为什么默认是关闭的: 计算机基础/计算机网络/TCP/tcp_tw_reuse为什么默认是关闭的.md
+                - HTTPS中TLS和TCP能同时握手吗: 计算机基础/计算机网络/TCP/HTTPS中TLS和TCP能同时握手吗.md
+                - TCP Keepalive 和 HTTP Keep-Alive是一个东西吗: 计算机基础/计算机网络/TCP/TCPKeepalive和HTTPKeep-Alive是一个东西吗.md
+                - TCP协议有什么缺陷: 计算机基础/计算机网络/TCP/TCP协议有什么缺陷.md
+                - 如何基于UDP协议实现可靠传输: 计算机基础/计算机网络/TCP/如何基于UDP协议实现可靠传输.md
             - HTTP:
                 - URI和URL区别和关联: 计算机基础/计算机网络/HTTP/URI和URL区别和关联.md
                 - HTTP常见面试题: 计算机基础/计算机网络/HTTP/HTTP常见面试题.md
