--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -318,36 +318,38 @@ nav:
             - Go语言面试:
                 - Go语言面试每日一题:
                     - 篇1:
-                        - 第1天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第1天.md
-                        - 第2天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第2天.md
-                        - 第3天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第3天.md
-                        - 第4天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第4天.md
-                        - 第5天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第5天.md
-                        - 第6天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第6天.md
-                        - 第7天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第7天.md
-                        - 第8天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第8天.md
-                        - 第9天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第9天.md
-                        - 第10天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第10天.md
-                        - 第11天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第11天.md
-                        - 第12天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第12天.md
-                        - 第13天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第13天.md
-                        - 第14天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第14天.md
-                        - 第15天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第15天.md
-                        - 第16天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第16天.md
-                        - 第17天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第17天.md
-                        - 第18天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第18天.md
-                        - 第19天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第19天.md
-                        - 第20天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第20天.md
-                        - 第21天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第21天.md
-                        - 第22天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第22天.md
-                        - 第23天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第23天.md
-                        - 第24天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第24天.md
-                        - 第25天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第25天.md
-                        - 第26天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第26天.md
-                        - 第27天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第27天.md
-                        - 第28天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第28天.md
-                        - 第29天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第29天.md
-                        - 第30天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/第30天.md
+                        - 第1天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第1天.md
+                        - 第2天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第2天.md
+                        - 第3天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第3天.md
+                        - 第4天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第4天.md
+                        - 第5天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第5天.md
+                        - 第6天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第6天.md
+                        - 第7天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第7天.md
+                        - 第8天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第8天.md
+                        - 第9天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第9天.md
+                        - 第10天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第10天.md
+                        - 第11天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第11天.md
+                        - 第12天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第12天.md
+                        - 第13天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第13天.md
+                        - 第14天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第14天.md
+                        - 第15天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第15天.md
+                        - 第16天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第16天.md
+                        - 第17天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第17天.md
+                        - 第18天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第18天.md
+                        - 第19天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第19天.md
+                        - 第20天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第20天.md
+                        - 第21天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第21天.md
+                        - 第22天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第22天.md
+                        - 第23天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第23天.md
+                        - 第24天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第24天.md
+                        - 第25天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第25天.md
+                        - 第26天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第26天.md
+                        - 第27天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第27天.md
+                        - 第28天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第28天.md
+                        - 第29天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第29天.md
+                        - 第30天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第30天.md
+                    - 篇2:
+                        - 第31天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第31天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
