新增面试题

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -350,6 +350,20 @@ nav:
                         - 第30天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇1/第30天.md
                     - 篇2:
                         - 第31天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第31天.md
+                        - 第32天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第32天.md
+                        - 第33天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第33天.md
+                        - 第34天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第34天.md
+                        - 第35天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第35天.md
+                        - 第36天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第36天.md
+                        - 第37天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第37天.md
+                        - 第38天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第38天.md
+                        - 第39天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第39天.md
+                        - 第40天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第40天.md
+                        - 第41天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第41天.md
+                        - 第42天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第42天.md
+                        - 第43天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第43天.md
+                        - 第44天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第44天.md
+                        - 第45天: 开发语言/Go语言开发/Go语言面试/Go面试每日一题/篇2/第45天.md
         - Java语言开发:
             - 开发环境搭建:
                 - Linux下安装JDK: 开发语言/Java语言开发/开发环境搭建/Ubuntu20.04安装JDK(java环境).md
